[gd_scene load_steps=75 format=2]

[ext_resource path="res://mobs/marauder/Marauder Idle/Devilling Marauder Idle0012.png" type="Texture" id=1]
[ext_resource path="res://mobs/marauder/Marauder Idle/Devilling Marauder Idle0010.png" type="Texture" id=2]
[ext_resource path="res://mobs/marauder/Marauder Idle/Devilling Marauder Idle0011.png" type="Texture" id=3]
[ext_resource path="res://mobs/marauder/Marauder Idle/Devilling Marauder Idle0007.png" type="Texture" id=4]
[ext_resource path="res://mobs/marauder/Marauder Idle/Devilling Marauder Idle0008.png" type="Texture" id=5]
[ext_resource path="res://mobs/marauder/Marauder Idle/Devilling Marauder Idle0006.png" type="Texture" id=6]
[ext_resource path="res://mobs/marauder/Marauder Idle/Devilling Marauder Idle0009.png" type="Texture" id=7]
[ext_resource path="res://mobs/marauder/Marauder Idle/Devilling Marauder Idle0001.png" type="Texture" id=8]
[ext_resource path="res://mobs/marauder/Marauder Idle/Devilling Marauder Idle0002.png" type="Texture" id=9]
[ext_resource path="res://mobs/marauder/Marauder Idle/Devilling Marauder Idle0003.png" type="Texture" id=10]
[ext_resource path="res://mobs/marauder/Marauder Idle/Devilling Marauder Idle0004.png" type="Texture" id=11]
[ext_resource path="res://mobs/marauder/Marauder Idle/Devilling Marauder Idle0005.png" type="Texture" id=12]
[ext_resource path="res://scripts/hurt and hit boxes/Hurtbox.tscn" type="PackedScene" id=13]
[ext_resource path="res://mobs/marauder/Maurader.gd" type="Script" id=14]
[ext_resource path="res://scripts/stats/Stats.tscn" type="PackedScene" id=15]
[ext_resource path="res://mobs/PlayerDetectionZone.tscn" type="PackedScene" id=16]
[ext_resource path="res://scripts/hurt and hit boxes/Hitbox.tscn" type="PackedScene" id=17]
[ext_resource path="res://mobs/SoftCollision.tscn" type="PackedScene" id=18]
[ext_resource path="res://mobs/WanderController.tscn" type="PackedScene" id=19]
[ext_resource path="res://mobs/marauder/Marauder Run/Devilling Marauder move0005.png" type="Texture" id=20]
[ext_resource path="res://mobs/marauder/Marauder Run/Devilling Marauder move0006.png" type="Texture" id=21]
[ext_resource path="res://mobs/marauder/Marauder Run/Devilling Marauder move0007.png" type="Texture" id=22]
[ext_resource path="res://mobs/marauder/Marauder Run/Devilling Marauder move0001.png" type="Texture" id=23]
[ext_resource path="res://mobs/marauder/Marauder Run/Devilling Marauder move0002.png" type="Texture" id=24]
[ext_resource path="res://mobs/marauder/Marauder Run/Devilling Marauder move0003.png" type="Texture" id=25]
[ext_resource path="res://mobs/marauder/Marauder Run/Devilling Marauder move0004.png" type="Texture" id=26]
[ext_resource path="res://mobs/marauder/defeat/Marauder Death0002.png" type="Texture" id=27]
[ext_resource path="res://mobs/marauder/Marauder Attack/Marauder Attk0001.png" type="Texture" id=28]
[ext_resource path="res://mobs/marauder/Marauder Attack/Marauder Attk0002.png" type="Texture" id=29]
[ext_resource path="res://mobs/marauder/Marauder Attack/Marauder Attk0005.png" type="Texture" id=30]
[ext_resource path="res://mobs/marauder/Marauder Attack/Marauder Attk0003.png" type="Texture" id=31]
[ext_resource path="res://mobs/marauder/Marauder Attack/Marauder Attk0004.png" type="Texture" id=32]
[ext_resource path="res://mobs/marauder/defeat/Marauder Death0001.png" type="Texture" id=33]
[ext_resource path="res://mobs/marauder/defeat/Marauder Death0007.png" type="Texture" id=34]
[ext_resource path="res://mobs/marauder/defeat/Marauder Death0010.png" type="Texture" id=35]
[ext_resource path="res://mobs/marauder/defeat/Marauder Death0004.png" type="Texture" id=36]
[ext_resource path="res://mobs/marauder/defeat/Marauder Death0009.png" type="Texture" id=37]
[ext_resource path="res://mobs/marauder/defeat/Marauder Death0006.png" type="Texture" id=38]
[ext_resource path="res://mobs/marauder/defeat/Marauder Death0005.png" type="Texture" id=39]
[ext_resource path="res://mobs/marauder/defeat/Marauder Death0003.png" type="Texture" id=40]
[ext_resource path="res://mobs/marauder/defeat/Marauder Death0008.png" type="Texture" id=41]
[ext_resource path="res://audio and videos/EnemyDie.wav" type="AudioStream" id=42]

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "defeat"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "defeat"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "defeat"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "defeat"

[sub_resource type="AnimationNodeBlendSpace2D" id=17]
blend_point_0/node = SubResource( 34 )
blend_point_0/pos = Vector2( -0.9, 0 )
blend_point_1/node = SubResource( 35 )
blend_point_1/pos = Vector2( 0, 0.9 )
blend_point_2/node = SubResource( 36 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 37 )
blend_point_3/pos = Vector2( 0, -0.8 )

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "idle"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 38 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 39 )
blend_point_1/pos = Vector2( 0, 0.8 )
blend_point_2/node = SubResource( 40 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 41 )
blend_point_3/pos = Vector2( 0, -0.9 )

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "run"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 42 )
blend_point_0/pos = Vector2( -1, -0.1 )
blend_point_1/node = SubResource( 43 )
blend_point_1/pos = Vector2( 0, 0.8 )
blend_point_2/node = SubResource( 44 )
blend_point_2/pos = Vector2( 0.9, -0.1 )
blend_point_3/node = SubResource( 45 )
blend_point_3/pos = Vector2( 0, -0.9 )

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachine" id=28]
states/defeat/node = SubResource( 17 )
states/defeat/position = Vector2( 43, 83 )
states/idle/node = SubResource( 22 )
states/idle/position = Vector2( 207, 83 )
states/run/node = SubResource( 27 )
states/run/position = Vector2( 368, 83 )
transitions = [ "defeat", "idle", SubResource( 30 ), "idle", "defeat", SubResource( 31 ), "idle", "run", SubResource( 32 ), "run", "idle", SubResource( 33 ) ]
start_node = "idle"
graph_offset = Vector2( -256, -23 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 33 ), ExtResource( 27 ), ExtResource( 40 ), ExtResource( 36 ), ExtResource( 39 ), ExtResource( 38 ), ExtResource( 34 ), ExtResource( 41 ), ExtResource( 37 ), ExtResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=46]
radius = 18.0
height = 94.0

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=11]
resource_name = "attack"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 23 ]
}

[sub_resource type="Animation" id=12]
resource_name = "defeat"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 30, 31, 32, 33, 33 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 42 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=10]
resource_name = "run"
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 72.0

[sub_resource type="CircleShape2D" id=4]
radius = 280.064

[sub_resource type="CircleShape2D" id=5]
radius = 58.4209

[sub_resource type="CircleShape2D" id=7]
radius = 81.0062

[node name="Marauder" type="KinematicBody2D"]
collision_layer = 17
collision_mask = 0
script = ExtResource( 14 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 28 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 29 )
parameters/defeat/blend_position = Vector2( 0, 0 )
parameters/idle/blend_position = Vector2( 0, 0 )
parameters/run/blend_position = Vector2( 0, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -60 )
scale = Vector2( 0.155556, 0.155556 )
frames = SubResource( 1 )
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, -3 )
rotation = 1.5708
shape = SubResource( 46 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/attack = SubResource( 11 )
anims/defeat = SubResource( 12 )
anims/idle = SubResource( 9 )
anims/run = SubResource( 10 )

[node name="Hurtbox" parent="." instance=ExtResource( 13 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( 0, -45 )
shape = SubResource( 3 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 16 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.278431 )
position = Vector2( 3, -38 )
shape = SubResource( 4 )

[node name="Hitbox" parent="." instance=ExtResource( 17 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 3, -38 )
shape = SubResource( 5 )

[node name="SoftCollision" parent="." instance=ExtResource( 18 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 3, -40 )
shape = SubResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 15 )]
max_health = 10

[node name="WanderController" parent="." instance=ExtResource( 19 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 42 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
